--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- head definitions go here -->
+        Test page
     </head>
     <body>
         Hello World!
